adding stamp back

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
             <ul class="papers">
               <li> 
                 <em><a href = "Publications/skkks_icra20.pdf" target = "_Blank">Anytime Task and Motion Polices for Stochastic Environments</a></em>.<br>
-                <!-- <a href="stamp.html">Project Page</a><br> -->
+                <a href="stamp.html">Project Page</a><br>
                 Naman Shah, Deepak Kala Vasudevan, Kislay Kumar, Pranav Kamojhalla,  Siddharth Srivastava.<br>
                 In Proceedings of ICRA 2020. (to appear) <br>
                 <span class="badge badge-primary">State/Action Abstractions</span>
