--- a/stamp.html
+++ b/stamp.html
@@ -85,7 +85,7 @@
           Our system computes a solution that picks and repositions several objects (placing the objects in the recycle box if they are crushed) before grasping the target object.
           <br/><br/>
 
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/tPWYuOa7IFs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Jmpp0Hm8gUE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
           <!-- <h6> <b>Case 1</b>: No delicate bottles need to be picked up to reach the target bottle </h6>
@@ -128,7 +128,7 @@
             <!-- <div class = "container" > -->
               <div class = "row" >
                 <div class = "col-md-3">
-                  <img src="Projects/STAMP/tower.png" height="315"/>
+                  <img style="border:1pt solid black" src="Projects/STAMP/tower.png" height="315"/>
                 </div>
                 <div class = "col-md-auto">
                   <span class = "pull-left">
@@ -142,7 +142,7 @@
 
           <div class = "row" >
             <div class = "col-md-3">
-              <img src="Projects/STAMP/spiral_tower.png" height="315"/>
+              <img  style="border:1pt solid black" src="Projects/STAMP/spiral_tower.png" height="315"/>
             </div>
             <div class = "col-md-auto">
               <span class = "pull-left">
@@ -155,7 +155,7 @@
 
           <div class = "row" >
             <div class = "col-md-3">
-              <img src="Projects/STAMP/triple_pi.png" height="315"/>
+              <img style="border:1pt solid black" src="Projects/STAMP/triple_pi.png" height="315"/>
             </div>
             <div class = "col-md-auto">
               <span class = "pull-left">
@@ -169,7 +169,7 @@
 
           <div class = "row" >
             <div class = "col-md-3">
-              <img src="Projects/STAMP/keva_three_tower.png" height="315" width = "315"/>
+              <img  style="border:1pt solid black" src="Projects/STAMP/keva_three_tower.png" height="315" width = "315"/>
             </div>
             <div class = "col-md-auto">
               <span class = "pull-left">
