stamp videos responsive

--- a/temp_stamp.html
+++ b/temp_stamp.html
@@ -67,11 +67,15 @@
           <b><a href="https://github.com/AAIR-lab/Anytime-Task-and-Motion-Policies" target="_blank">Source code</a></b><br>
           <br>
           <h3>Presentation Video</h3>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/nXxL1MmmhZ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+          <!-- embed-responsive-item -->
+          <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/nXxL1MmmhZ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+          <div class="embed-responsive embed-responsive-16by9" style="max-width:560px; max-height:315px;">
+          <iframe class = "embed-responsive-item" src="https://www.youtube.com/embed/nXxL1MmmhZ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
           <br><br><br>
 
-          <h3> Videos of experiments: </h3>
+          <h3> Videos of experiments </h3>
           In all the experiments below, "solution" refers to a tree-structured <b>proper policy</b> for the abstract SSP with motion plans for all of the robot's movements. 
           <br><br><br>
           <h4> Cluttered Table </h4>
@@ -85,8 +89,9 @@
           Our system computes a solution that picks and repositions several objects (placing the objects in the recycle box if they are crushed) before grasping the target object.
           <br/><br/>
 
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/Jmpp0Hm8gUE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+          <div class="embed-responsive embed-responsive-16by9" style="max-width:560px; max-height:315px;">
+          <iframe class = "embed-responsive-item" src="https://www.youtube.com/embed/Jmpp0Hm8gUE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
 
           <!-- <h6> <b>Case 1</b>: No delicate bottles need to be picked up to reach the target bottle </h6>
           In this case, our system computes the solution to pick bottles which obstructs the target bottle, place them somewhere on the table and pick the target bottle. <br><br>
@@ -130,11 +135,11 @@
                 <div class = "col-md-3">
                   <img style="border:1pt solid black" src="Projects/STAMP/tower.png" height="315"/>
                 </div>
-                <div class = "col-md-auto">
-                  <span class = "pull-left">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/dIplH8PyLcw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </span>
-                </div>
+                <!-- <div class = "col-md-auto"> -->
+                    <div class="embed-responsive embed-responsive-16by9" style="max-width:560px; max-height:315px;">
+                      <iframe class = "embed-responsive-item" src="https://www.youtube.com/embed/dIplH8PyLcw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                <!-- </div> -->
               <!-- </div> -->
             </div>
           <br><br>
@@ -144,10 +149,8 @@
             <div class = "col-md-3">
               <img  style="border:1pt solid black" src="Projects/STAMP/spiral_tower.png" height="315"/>
             </div>
-            <div class = "col-md-auto">
-              <span class = "pull-left">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/RhLkwfnGLzw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </span>
+            <div class="embed-responsive embed-responsive-16by9" style="max-width:560px; max-height:315px;">
+                <iframe class ="embed-responsive-item" src="https://www.youtube.com/embed/RhLkwfnGLzw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
           <br><br>
@@ -157,10 +160,8 @@
             <div class = "col-md-3">
               <img style="border:1pt solid black" src="Projects/STAMP/triple_pi.png" height="315"/>
             </div>
-            <div class = "col-md-auto">
-              <span class = "pull-left">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/G2eEHR36EWI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </span>
+            <div class="embed-responsive embed-responsive-16by9" style="max-width:560px; max-height:315px;">
+                <iframe class = "embed-responsive-item" src="https://www.youtube.com/embed/G2eEHR36EWI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
           <br><br>
@@ -171,10 +172,8 @@
             <div class = "col-md-3">
               <img  style="border:1pt solid black" src="Projects/STAMP/keva_three_tower.png" height="315" width = "315"/>
             </div>
-            <div class = "col-md-auto">
-              <span class = "pull-left">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/jp9eM72_68Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </span>
+            <div class="embed-responsive embed-responsive-16by9" style="max-width:560px; max-height:315px;">
+                <iframe class = "embed-responsive-item" src="https://www.youtube.com/embed/jp9eM72_68Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           </div>
           <br><br>
