--- a/temp_stamp.html
+++ b/temp_stamp.html
@@ -132,8 +132,8 @@
         <h6> <b>Sturcture 1</b>: Tower (hight: 12) </h6><br>
             <!-- <div class = "container" > -->
               <div class = "row" >
-                <div class = "col-md-3">
-                  <img style="border:1pt solid black" src="Projects/STAMP/tower.png" height="315"/>
+                <div class = "col-md-3" style="margin-bottom: 10pt;">
+                  <img style="border:1pt solid black; margin: auto; display: block;" src="Projects/STAMP/tower.png" height="315"/>
                 </div>
                 <!-- <div class = "col-md-auto"> -->
                     <div class="embed-responsive embed-responsive-16by9" style="max-width:560px; max-height:315px;">
@@ -146,8 +146,8 @@
           <h6><b>Structure 2</b>: Twisted Tower (height: 12)</h6><br>
 
           <div class = "row" >
-            <div class = "col-md-3">
-              <img  style="border:1pt solid black" src="Projects/STAMP/spiral_tower.png" height="315"/>
+            <div class = "col-md-3" style="margin-bottom: 10pt;"> 
+              <img  style="border:1pt solid black; margin: auto; display: block;" src="Projects/STAMP/spiral_tower.png" height="315"/>
             </div>
             <div class="embed-responsive embed-responsive-16by9" style="max-width:560px; max-height:315px;">
                 <iframe class ="embed-responsive-item" src="https://www.youtube.com/embed/RhLkwfnGLzw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -157,8 +157,8 @@
           <h6><b>Structure 3</b>: 3Pi</h6><br>
 
           <div class = "row" >
-            <div class = "col-md-3">
-              <img style="border:1pt solid black" src="Projects/STAMP/triple_pi.png" height="315"/>
+            <div class = "col-md-3" style="margin-bottom: 10pt;">
+              <img style="border:1pt solid black;  margin: auto; display: block; " src="Projects/STAMP/triple_pi.png" height="315"/>
             </div>
             <div class="embed-responsive embed-responsive-16by9" style="max-width:560px; max-height:315px;">
                 <iframe class = "embed-responsive-item" src="https://www.youtube.com/embed/G2eEHR36EWI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -169,8 +169,8 @@
 
 
           <div class = "row" >
-            <div class = "col-md-3">
-              <img  style="border:1pt solid black" src="Projects/STAMP/keva_three_tower.png" height="315" width = "315"/>
+            <div class = "col-md-3" style="margin-bottom: 10pt; margin-right: 10pt;">
+              <img  style="border:1pt solid black; margin: auto; display: block;" src="Projects/STAMP/keva_three_tower.png" height="315" />
             </div>
             <div class="embed-responsive embed-responsive-16by9" style="max-width:560px; max-height:315px;">
                 <iframe class = "embed-responsive-item" src="https://www.youtube.com/embed/jp9eM72_68Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
