stamp image responsive

--- a/temp_stamp.html
+++ b/temp_stamp.html
@@ -169,8 +169,8 @@
 
 
           <div class = "row" >
-            <div class = "col-md-3" style="margin-bottom: 10pt; margin-right: 10pt;">
-              <img  style="border:1pt solid black; margin: auto; display: block;" src="Projects/STAMP/keva_three_tower.png" height="315" />
+            <div class = "col-md-3" style="margin-bottom: 10pt; margin-right: 10pt; ">
+              <img  style="border:1pt solid black; margin: auto; display: block; max-width:80%;" src="Projects/STAMP/keva_three_tower.png" height="315" />
             </div>
             <div class="embed-responsive embed-responsive-16by9" style="max-width:560px; max-height:315px;">
                 <iframe class = "embed-responsive-item" src="https://www.youtube.com/embed/jp9eM72_68Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
