--- a/temp_stamp.html
+++ b/temp_stamp.html
@@ -129,7 +129,7 @@
           <br><br>
 
         <!--   <h5>ABB YuMi buidling Tower in simulation </h5> -->
-        <h6> <b>Sturcture 1</b>: Tower (hight: 12) </h6><br>
+        <h6> <b>Sturcture 1</b>: Tower (height: 12) </h6><br>
             <!-- <div class = "container" > -->
               <div class = "row" >
                 <div class = "col-md-3" style="margin-bottom: 10pt;">
