spell and typo check

--- a/temp_stamp.html
+++ b/temp_stamp.html
@@ -92,33 +92,10 @@
           <div class="embed-responsive embed-responsive-16by9" style="max-width:560px; max-height:315px;">
           <iframe class = "embed-responsive-item" src="https://www.youtube.com/embed/Jmpp0Hm8gUE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-
-          <!-- <h6> <b>Case 1</b>: No delicate bottles need to be picked up to reach the target bottle </h6>
-          In this case, our system computes the solution to pick bottles which obstructs the target bottle, place them somewhere on the table and pick the target bottle. <br><br>
-          Simulation Video:<br><br>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/ZLBy6pFAM6A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <br><br>
-          Physical Robot Video: <br><br>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/9uQWJPA8VXU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <br><br>
-
-            
-          <h6><b>Case 2</b>: A delicate bottle needs to be picked up to reach the target bottle.</h6>
-          In this case, our system computes the solution where,
-          <ol>
-            <li>If the robot picks up a delicate bottle and observes that the bottle is crushed then it places it in the recycling box.</li>
-            <li>If the robot picks up a delicate bottle and observes that the bottle is not crushed then it places it back on the table.</li>
-          </ol>
-          <i>Case 2.1</i>: Robot picks up a delicate bottle and oberves that it is crushed.<br><br>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/hh2_5iniJg4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <br><br>
-          <i>Case 2.2</i>: Robot picks up a delicate bottle and observes that it is not crushed.<br><br>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/sLDXlfh8gnk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        -->
           <br><br> 
 
         <h4> Building structures with Keva planks </h4> <br>
-          <i>Goal</i>: Build the given Keva structure usin ABB YuMi.
+          <i>Goal</i>: Build the given Keva structure using ABB YuMi.
           <br>
             <ul>
               <li>A Human can place a plank at one of the predefined locations. YuMi observes the environment and picks the plank from that location. </li>
@@ -128,8 +105,7 @@
 
           <br><br>
 
-        <!--   <h5>ABB YuMi buidling Tower in simulation </h5> -->
-        <h6> <b>Sturcture 1</b>: Tower (height: 12) </h6><br>
+        <h6> <b>Structure 1</b>: Tower (height: 12) </h6><br>
             <!-- <div class = "container" > -->
               <div class = "row" >
                 <div class = "col-md-3" style="margin-bottom: 10pt;">
