--- a/ll.html
+++ b/ll.html
@@ -70,7 +70,9 @@
           </ul>
           <br>
           <h3>Presentation Video</h3>
-          <iframe width="853" height="480" src="https://www.youtube.com/embed/IZI15-bzBYs?autoplay=0" frameborder="0" allowfullscreen></iframe>
+          <div class="embed-responsive embed-responsive-16by9" style="max-width:853px; max-height:480px;">
+          <iframe class ="embed-responsive-item" src="https://www.youtube.com/embed/IZI15-bzBYs?autoplay=0" frameborder="0" allowfullscreen></iframe>
+          </div>
           <br/ ><br/ >
 
         </div>
