--- a/stamp.html
+++ b/stamp.html
@@ -86,11 +86,11 @@
               <li>There is no designated free area where obstructing objects can be stashed.</li>
             </ul>
 
-          Our system computes a solution that picks and repositions several objects (placing the objects in the recycle box if they are crushed) before grasping the target object.
+          Our system computes a solution that picks and repositions several objects (placing the objects in the recycling box if they are crushed) before picking up the target object.
           <br/><br/>
 
           <div class="embed-responsive embed-responsive-16by9" style="max-width:560px; max-height:315px;">
-          <iframe class = "embed-responsive-item" src="https://www.youtube.com/embed/Jmpp0Hm8gUE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class = "embed-responsive-item" src="https://www.youtube.com/embed/MT7gfHpL8Pk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
           <br><br> 
 
@@ -98,10 +98,10 @@
           <i>Goal</i>: Build the given Keva structure using ABB YuMi.
           <br>
             <ul>
-              <li>A Human can place a plank at one of the predefined locations. YuMi observes the environment and picks the plank from that location. </li>
+              <li>The user can place a plank at one of the predefined locations. YuMi observes the environment and picks the plank from that location. </li>
             </ul>
 
-          Our system computes the solution which handles all the contingencies related to the placement of the Keva plank by the human.
+          Our system computes the solution which handles all contingencies related to the placement of the Keva plank by the user.
 
           <br><br>
 
