--- a/stamp.html
+++ b/stamp.html
@@ -63,7 +63,7 @@
           <h4>[IEEE Conference on Robotics and Automation (ICRA), 2020 (to appear)]</h4><br>
 
           <b><a href="Publications/skkks_icra20.pdf" target = "_blank">ICRA 2020 Paper</a></b><br>
-          <b><a href="Projects/STAMP/skkks_icra2020_full.pdf" target = "_blank">Full version of the submitted paper</a></b><br>
+          <b><a href="Projects/STAMP/skkks_icra2020_full.pdf" target = "_blank">Extended version of the submitted paper</a></b><br>
           <b><a href="https://github.com/AAIR-lab/Anytime-Task-and-Motion-Policies" target="_blank">Source code</a></b><br>
           <br>
           <h3>Presentation Video</h3>
