--- a/stamp.html
+++ b/stamp.html
@@ -62,8 +62,8 @@
           <h3>Naman Shah, Deepak Kala Vasudevan, Kislay Kumar, Pranav Kamojhalla,Siddharth Srivastava </h3><br>
           <h4>[IEEE Conference on Robotics and Automation (ICRA), 2020 (to appear)]</h4><br>
 
-          <b><a href="Publications/skkks_icra20.pdf" target = "_blank">ICRA 2020 Paper</a></b><br>
-          <b><a href="Projects/STAMP/skkks_icra2020_full.pdf" target = "_blank">Extended version of the submitted paper</a></b><br>
+          <b><a href="Publications/skkks_icra20.pdf" target = "_blank">ICRA 2020 paper</a></b><br>
+          <b><a href="Projects/STAMP/skkks_icra2020_full.pdf" target = "_blank">Extended version</a></b><br>
           <b><a href="https://github.com/AAIR-lab/Anytime-Task-and-Motion-Policies" target="_blank">Source code</a></b><br>
           <br>
           <h3>Presentation Video</h3>
@@ -130,7 +130,7 @@
             </div>
           </div>
           <br><br>
-          <h6><b>Structure 3</b>: 3Pi</h6><br>
+          <h6><b>Structure 3</b>: 3&pi;</h6><br>
 
           <div class = "row" >
             <div class = "col-md-3" style="margin-bottom: 10pt;">
