--- a/index.html
+++ b/index.html
@@ -548,6 +548,17 @@
               </li>
             </ul>
           </div>
+          <div class="paper mobManipulation abstraction">
+            <ul class="papers">
+              <li> 
+                <em><a href="Publications/ldgask_iral18.pdf">Platform-Independent Benchmarks for Task and Motion Planning</a></em>. <br>
+                Fabien Lagriffoul, Neil T. Dantam, Caelan Garrett, Aliakbar Akbari, Siddharth Srivastava, Lydia E. Kavraki..<br>
+                IEEE Robotics and Automation Letters (RA-L), Vol. 3, Issue 4, pp. 3765-3772, 2018.<br>
+                <span class="badge badge-secondary">Mobile Manipulation</span>
+                <span class="badge badge-primary">State/Action Abstractions</span>
+              </li>
+            </ul>
+          </div>
           <div class="paper probInference learning">
             <ul class="papers">
               <li> 
