--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
               <div class="col-lg-4">
                 	<img class="rounded-circle" src="images/naman.jpg" alt="Naman P Shah" width="140" height="140">
-                	</br></br><h4>Naman P Shah</h4>
+                	</br></br><h4><a href = "https://namanshah.net" target = "_Blank" >Naman P Shah </a></h4>
                 	<p>Ph.D. Student</p>
               	</div>
               
